--- a/vignettes/batch_aermod.Rmd
+++ b/vignettes/batch_aermod.Rmd
@@ -7,16 +7,16 @@ vignette: >
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteIndexEntry{Method for updating air screening dispersion factors}
 ---
-
-
+  
+  
 ```{r}
 library(tidyverse)
-library(installEPA)
-library(receptors) #remotes::install_github(c("dKvale/receptors", "dKvale/bpip"))
-library(aermod)    #remotes::install_github("dKvale/aermod")
+library(installEPA) #remotes::install_github(c("dKvale/installEPA"))
+library(receptors)  #remotes::install_github(c("dKvale/receptors", "dKvale/bpip"))
+library(aermod)     #remotes::install_github("dKvale/aermod")
 
 
-install_epa(c("aermod", "aerscreen", "bpip", "makemet"), 
+install_epa(c("makemet"), 
             dir = "EPA", 
             add_model_folder = FALSE)
 
@@ -33,14 +33,14 @@ tempsF <- list("Ambient", 68, 107, 350)
 u_star <- c(TRUE)
 
 n_scenarios <- length(sk_heights) *
-               length(sk_diameters) * 
-               length(sk_velocity) * 
-               length(tempsK)  
+  length(sk_diameters) * 
+  length(sk_velocity) * 
+  length(tempsK)  
 
-  
+
 # Create receptor grid
+boundary_distances = 10
 
-  
 
 results_table <- tibble(stack_height = rep(sk_heights, each = length(boundary_distances)),
                         boundary_distance = rep(boundary_distances, length(sk_heights)),
@@ -54,6 +54,7 @@ knitr::kable(head(results_table, 100))
 # Create new aerscreen table ----
 aer_inp <- new_aermod()
 
+aer_inp$emit_gs <- 1
 
 # Set default scenario
 height     = sk_heights[1]
@@ -62,102 +63,106 @@ velocity   = sk_velocity[1]
 tempk      = tempsK[1]
 
 
+new_build <- bpip::new_bpip()
+bld_ht_frx = 0.5
+bld_dist = 10
 
 # Loop through each input parameter scenario:
 
-        ## Set Ustar met option
-        aer_inp <- mutate(aer_inp,
-                          adjust_ustar = ifelse(star, "Y", "N")) 
+## Set Ustar met option
+aer_inp <- mutate(aer_inp,
+                  adjust_ustar = ifelse(u_star, "Y", "N")) 
+
+## Add building to input file
+new_build$bld_height       <- height * bld_ht_frx
+new_build$dist_from_source <- bld_dist
+
+aer_inp[ , names(new_build)] <- new_build[1, ]
+
+
+# Turn downwash processing on
+aer_inp$bpip_run <- "Y"
+
+
+## Write AERSCREEN input file
+write_aerscreen(aer_inp, "EPA/screen.inp", out_file = "screen_results")
+
+## Run aerscreen on input file
+run_aerscreen("EPA/screen.inp", 
+              out_file   = "screen_results",
+              exe_folder = "EPA")
+
+## Update AERMOD input file
+aermod_inp    <- readLines("EPA/screen_results.inp")
+
+## Add discrete receptors for distances greater than 50 meters
+re_endline    <- grep("RE FINISHED", aermod_inp)
+
+new_receptors <- paste0("   DISCCART         " , receptors::fw(boundary_distances[boundary_distances > 50], 14), "0.00                                                                                                                                                                                                                    ")
+
+aermod_inp <- c(aermod_inp[1:(re_endline-2)], new_receptors, aermod_inp[re_endline:length(aermod_inp)])
+
+# Re-set dispersion table
+count <- 1
+disp_table <- results_table
+
+# Using the AERSCREEN met files, loop through each stack variation
+for(height in sk_heights) {
+  
+  for(diam in sk_diameters) {
+    
+    for(velocity in sk_velocity) {
+      
+      for(tempK in tempsK) {
         
-        ## Add building to input file
-        new_build$bld_height       <- height * bld_ht_frx
-        new_build$dist_from_source <- bld_dist
         
-        aer_inp[ , names(new_build)] <- new_build[1, ]
+        # Print iteration count
+        print(count)
+        count <- count + 1
         
-        # Turn downwash processing on
-        aer_inp$bpip_run <- "Y"
-        
-        
-        ## Write AERSCREEN input file
-        write_aerscreen(aer_inp, "EPA/screen.inp", out_file = "screen_results")
-        
-        ## Run aerscreen on input file
-        run_aerscreen("EPA/screen.inp", 
-                      out_file   = "screen_results",
-                      exe_folder = "EPA")
         
         ## Update AERMOD input file
-        aermod_inp    <- readLines("EPA/screen_results.inp")
+        source_line   <- grep("SRCPARAM SOURCE", aermod_inp)
         
-        ## Add discrete receptors for distances greater than 50 meters
-        re_endline    <- grep("RE FINISHED", aermod_inp)
+        aermod_inp[source_line] <- paste0("   SRCPARAM SOURCE   0.1000E+01    ", 
+                                          receptors::fw(height, 9),
+                                          receptors::fw(tempk, 9),
+                                          receptors::fw(velocity, 9),
+                                          receptors::fw(diam, 9))
         
-        new_receptors <- paste0("   DISCCART         " , receptors::fw(boundary_distances[boundary_distances > 50], 14), "0.00                                                                                                                                                                                                                    ")
         
-        aermod_inp <- c(aermod_inp[1:(re_endline-2)], new_receptors, aermod_inp[re_endline:length(aermod_inp)])
+        ## Run AERMOD on input file
+        screen_results <- run_aermod(aermod_inp, 
+                                     out_file   = "screen_results_aermod",
+                                     exe_folder = "EPA")
         
-        # Re-set dispersion table
-        count <- 1
-        disp_table <- results_table
+        ## Load results as table
+        screen_results <- read_aermod_out("screen_results_aermod.out")
         
-        # Using the AERSCREEN met files, loop through each stack variation
-        for(height in sk_heights) {
+        
+        ## Find maximum dispersion within each boundary distance
+        for(i in 1:nrow(disp_table)) {
           
-          for(diam in sk_diameters) {
-            
-            for(velocity in sk_velocity) {
-              
-              for(tempK in tempsK) {
-                
-                
-                # Print iteration count
-                print(count)
-                count <- count + 1
-                
-                
-                ## Update AERMOD input file
-                source_line   <- grep("SRCPARAM SOURCE", aermod_inp)
-                
-                aermod_inp[source_line] <- paste0("   SRCPARAM SOURCE   0.1000E+01    ", 
-                                                  receptors::fw(height, 9),
-                                                  receptors::fw(tempk, 9),
-                                                  receptors::fw(velocity, 9),
-                                                  receptors::fw(diam, 9))
-                
-                
-                ## Run AERMOD on input file
-                screen_results <- run_aermod(aermod_inp, 
-                                             out_file   = "screen_results_aermod",
-                                             exe_folder = "EPA")
-                
-                ## Load results as table
-                screen_results <- read_aermod_out("screen_results_aermod.out")
-                
-                
-                ## Find maximum dispersion within each boundary distance
-                for(i in 1:nrow(disp_table)) {
-                  
-                  if(disp_table[i, ]$stack_height != height) next()
-                  
-                  screen <- filter(screen_results, x_coord >= disp_table[i, ]$boundary_distance)
-                  
-                  disp_table[i, ]$disp_1hr    <- max(disp_table[i, ]$disp_1hr, 
-                                                     screen$concentration, na.rm = T)
-                  
-                  disp_table[i, ]$disp_24hr   <- max(disp_table[i, ]$disp_1hr, 
-                                                      screen$concentration * 0.6, na.rm = T)
-                  
-                  disp_table[i, ]$disp_annual <- max(disp_table[i, ]$disp_1hr, 
-                                                     screen$concentration / 10, na.rm = T)
-                }
-                
-              }}}}
+          if(disp_table[i, ]$stack_height != height) next()
+          
+          screen <- filter(screen_results, x_coord >= disp_table[i, ]$boundary_distance)
+          
+          disp_table[i, ]$disp_1hr    <- max(disp_table[i, ]$disp_1hr, 
+                                             screen$concentration, na.rm = T)
+          
+          disp_table[i, ]$disp_24hr   <- max(disp_table[i, ]$disp_1hr, 
+                                             screen$concentration * 0.6, na.rm = T)
+          
+          disp_table[i, ]$disp_annual <- max(disp_table[i, ]$disp_1hr, 
+                                             screen$concentration / 10, na.rm = T)
+        }
         
-        # Save the scenario results
-        saveRDS(disp_table, paste0("Dispersion table for ustar_", star, ", surface_", surface, ", bld_", gsub("[.]", "", bld_ht_frx), "_", bld_dist, "m.csv"))
-        
-      }}
+      }}}}
+
+# Save the scenario results
+saveRDS(disp_table, paste0("Dispersion table for ustar_", star, ", surface_", surface, ", bld_", gsub("[.]", "", bld_ht_frx), "_", bld_dist, "m.csv"))
+
+}}
 
 
 # Combine results
@@ -174,21 +179,21 @@ for(i in files) {
   tmp$surface_type = str_split(i, "surface_")[[1]][2] %>% substring(1,1)
   
   tmp$bld_height = str_split(i, "bld_")[[1]][2] %>% 
-                   substring(1,2) %>% 
-                   switch("05" =  "50%", "07" = "75%", "1_" = "100%")
+    substring(1,2) %>% 
+    switch("05" =  "50%", "07" = "75%", "1_" = "100%")
   
   tmp$bld_distance = str_split(i, "bld_[:digit:]*_")[[1]][2] %>% substring(1,3)
-
+  
   df <- bind_rows(tmp, df)
 }
 
 
 df <- df %>%
-      arrange(stack_height, boundary_distance) %>% 
-      filter(boundary_distance >= 9, stack_height >= 1) %>%
-      mutate(disp_1hr = round(disp_1hr, 1),
-             disp_annual = round(disp_annual, 1),
-             bld_distance = if_else(bld_distance == "0m.", "0m", bld_distance))
+  arrange(stack_height, boundary_distance) %>% 
+  filter(boundary_distance >= 9, stack_height >= 1) %>%
+  mutate(disp_1hr = round(disp_1hr, 1),
+         disp_annual = round(disp_annual, 1),
+         bld_distance = if_else(bld_distance == "0m.", "0m", bld_distance))
 
 
 write_csv(df, "facility_screening_dispersion_values.csv")
